@@ -1,3 +1,10 @@
+2007-09-18  Naba Kumar  <naba.kumar@gnome.org>
+
+	* plugins/language-support-cpp-java/cpp-java-assist.c: Improved
+	completion items sorting and avoided unnecssary sorts.
+
+	* plugins/text-editor.c: Fixed state.
+
 2007-09-17  Johannes Schmid <jhs@gnome.org>
 
 	* plugins/language-support-cpp-java/cpp-java-assist.c:
